# test

./: CMakeLists.txt  com_sdk_jni_kestrel_JNISayHello.cpp  com_sdk_jni_kestrel_KestrelStructHh.cpp  com_sdk_jni_kestrel_KestrelStructHh.h
