CMAKE_MINIMUM_REQUIRED(VERSION 3.0)
PROJECT(sensetivewords_sample)
IF (NOT KESTREL_ROOT)
    SET(KESTREL_ROOT ${CMAKE_CURRENT_SOURCE_DIR}/..)
    MESSAGE(WARNING "Missing assigned KESTREL_ROOT variable, use default [${KESTREL_ROOT}]")
ENDIF()
FILE(GLOB_RECURSE samples ${CMAKE_CURRENT_SOURCE_DIR}/com_sdk_jni_kestrel*.cpp)
INCLUDE_DIRECTORIES(${KESTREL_ROOT}/include)
LINK_DIRECTORIES(${KESTREL_ROOT}/lib)
SET(LIBS kestrel kestrel_core)
FOREACH(sample_src ${samples})
    GET_FILENAME_COMPONENT(sample_name ${sample_src} NAME_WE)
    ADD_EXECUTABLE(${sample_name} ${sample_src})
    target_compile_options(${sample_name} PRIVATE -std=c++11)
    TARGET_LINK_LIBRARIES(${sample_name} 
            ${LIBS})
ENDFOREACH()
